(fix) Minor changes in responsive mode and dark mode

--- a/public/css/Badge.css
+++ b/public/css/Badge.css
@@ -18,9 +18,10 @@
 }
 
 .Badge-div-table.Info {
-    width: 770px;
+    width: 100%;
     font-size: 13px;
     text-align: left;
+    box-sizing: border-box;
 }
 
 .Badge-div-table-InfoInside {
@@ -39,6 +40,7 @@
 
 .Badge-div-oneTable {
     border: solid grey 1px;
+    max-width: 100%;
 }
 
 .Badge-div-spaceBetweenTables {
